# midi-chat

./: .eslintcache  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
app/: connections.py  main.py
server/: client.go  main.go  registry.go  room.go  sockets.go
src/: App.js  App.tsx  index.js
src/context/: midi.js  username.js  ws.js
src/midi/: input.tsx
src/state/: midi.tsx
