[tool.poetry]
name = "midi-chat"
version = "0.1.0"
description = "midi relay & router over websockets"
authors = ["asmr-hex <c@polygon.pizza>"]
license = "CC0"
readme = "README.md"
homepage = "https://midi.chat"
repository = "https://github.com/asmr-hex/midi-chat"
keywords = ["midi", "websockets", "music"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
